# kella-v1.0

./: README.md  install.sh
Code/: CMakeLists.txt
Code/include/: message.h  parameters.h  variable.h
Code/modules/esp32/include/: esp32.h
Code/modules/esp32/src/: esp32.cpp
Code/modules/gui/src/: gui.cpp  gui_dispatcher.cpp  status_button.cpp
Code/modules/joystick/src/: joystick.cpp  joystick_linux.cpp
ESP32_CODE/: mAC.txt
ESP32_CODE/Motor_Driver/: Motor_Driver.ino
ESP32_CODE/Motor_Driver/COM/: COM.ino
ESP32_CODE/Motor_Driver/master/: master.ino
ESP32_CODE/Motor_Driver/test/: test.ino
ESP32_CODE/Motor_Driver/test_slave/: test_slave.ino
ESP32_CODE/Motor_Driver_V2/: Motor_Driver_V2.ino
KELLA PCB/CAMOutputs/Assembly/: ESB32CARRIER.txt
KELLA PCB/CAMOutputs/DrillFiles/: drill_1_16.xln
KELLA PCB/CAMOutputs/GerberFiles/: copper_bottom.gbr  copper_top.gbr  gerber_job.gbrjob  profile.gbr  silkscreen_top.gbr  (+2 more)
KELLA PCB/ESP32/: ESP32WROOM36.l#1  ESP32WROOM36.l#2  ESP32WROOM36.lbr
KELLA PCB/KELLA/: ESB32CARRIER.b#1  ESB32CARRIER.b#2  ESB32CARRIER.b#3  ESB32CARRIER.b#4  ESB32CARRIER.b#5  ESB32CARRIER.b#6  ESB32CARRIER.b#7  ESB32CARRIER.b#8  ESB32CARRIER.b#9  ESB32CARRIER.brd  ESB32CARRIER.pro  ESB32CARRIER.s#1  ESB32CARRIER.s#2  ESB32CARRIER.s#3  ESB32CARRIER.s#4  ESB32CARRIER.s#5  ESB32CARRIER.s#6  ESB32CARRIER.s#7  ESB32CARRIER.s#8  ESB32CARRIER.s#9  ESB32CARRIER.sch  ESB32CARRIER_00.job  ESB32CARRIER_01.job  eagle.epf  untitled.b#1  untitled.brd  untitled.s#2  untitled.s#3  untitled.sch
KELLAPCB/ESP32KiCAD/: KiCAD.rar
MPW52/MPW52/: MPW52.proj  OnlineMonitorSettings.xml
MPW52/MPW52_2/: MPW52_2.proj  OnlineMonitorSettings.xml
MotorDriver/kella/: OnlineMonitorSettings.xml  kella.proj
src/: app.cpp  message.cpp  parameters.cpp
(+80 files in other folders)
